[tool.poetry]
name = "landau"
version = "0.1.0"
description = ""
authors = ["haxdds <haxdds@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alpaca-py = "^0.2.0"
ccxt = "^1.88.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
